[gd_scene load_steps=25 format=1]

[ext_resource path="res://scripts/pongout.gd" type="Script" id=1]
[ext_resource path="res://assets/game/separator.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/left_score.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/right_score.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/joystix monospace.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/player1.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/player2.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/game/powerups.png" type="Texture" id=8]
[ext_resource path="res://scenes/overlay.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sound/sfx/game_over.wav" type="Sample" id=10]
[ext_resource path="res://assets/sound/sfx/pause.wav" type="Sample" id=11]
[ext_resource path="res://assets/sound/sfx/ui_select.wav" type="Sample" id=12]
[ext_resource path="res://assets/sound/sfx/unpause.wav" type="Sample" id=13]

[sub_resource type="DynamicFont" id=1]

font/size = 20
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]

font/size = 20
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]

font/size = 64
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]

font/size = 40
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]

font/size = 44
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="SampleLibrary" id=11]

samples/game_over = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/pause = {
"db": 10.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}
samples/ui_select = {
"db": 10.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}
samples/unpause = {
"db": 10.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="seperator" type="Sprite" parent="."]

transform/pos = Vector2( 960, 540 )
z/z = -3
texture = ExtResource( 2 )

[node name="score" type="Node2D" parent="."]

[node name="left_score" type="Sprite" parent="score"]

transform/pos = Vector2( 0, 12.5 )
z/z = -1
texture = ExtResource( 3 )

[node name="right_score" type="Sprite" parent="score"]

transform/pos = Vector2( 960, 12.5 )
z/z = -2
texture = ExtResource( 4 )

[node name="left_score_label" type="Label" parent="score"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = -7.0
margin/right = 54.0
margin/bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "500"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="right_score_label" type="Label" parent="score"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1846.0
margin/top = -7.0
margin/right = 1895.0
margin/bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "500"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="countdown" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 933.0
margin/top = 489.0
margin/right = 987.0
margin/bottom = 566.0
custom_fonts/font = SubResource( 3 )
text = "3"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player1" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( 100, 552.5 )

[node name="player2" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 1820, 552.5 )

[node name="player1_powerups" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 25.0
margin/right = 28.0
margin/bottom = 132.0

[node name="armor" type="Sprite" parent="player1_powerups"]

transform/pos = Vector2( 14, 14 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
hframes = 7

[node name="overlay" parent="player1_powerups/armor" instance=ExtResource( 9 )]

[node name="curve" type="Sprite" parent="player1_powerups"]

transform/pos = Vector2( 14, 40 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
hframes = 7
frame = 1

[node name="overlay" parent="player1_powerups/curve" instance=ExtResource( 9 )]

[node name="pad_speed" type="Sprite" parent="player1_powerups"]

transform/pos = Vector2( 14, 66 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
hframes = 7
frame = 3

[node name="overlay" parent="player1_powerups/pad_speed" instance=ExtResource( 9 )]

[node name="ball_speed" type="Sprite" parent="player1_powerups"]

transform/pos = Vector2( 14, 92 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
hframes = 7
frame = 5

[node name="overlay" parent="player1_powerups/ball_speed" instance=ExtResource( 9 )]

[node name="player2_powerups" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1892.0
margin/top = 25.0
margin/right = 1920.0
margin/bottom = 132.0

[node name="armor" type="Sprite" parent="player2_powerups"]

transform/pos = Vector2( 14, 14 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
hframes = 7

[node name="overlay" parent="player2_powerups/armor" instance=ExtResource( 9 )]

[node name="curve" type="Sprite" parent="player2_powerups"]

transform/pos = Vector2( 14, 40 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
hframes = 7
frame = 1

[node name="overlay" parent="player2_powerups/curve" instance=ExtResource( 9 )]

[node name="pad_speed" type="Sprite" parent="player2_powerups"]

transform/pos = Vector2( 14, 66 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
hframes = 7
frame = 3

[node name="overlay" parent="player2_powerups/pad_speed" instance=ExtResource( 9 )]

[node name="ball_speed" type="Sprite" parent="player2_powerups"]

transform/pos = Vector2( 14, 92 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
hframes = 7
frame = 5

[node name="overlay" parent="player2_powerups/ball_speed" instance=ExtResource( 9 )]

[node name="powerup_spawn_zone" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 545.0
margin/top = 90.0
margin/right = 1375.0
margin/bottom = 1015.0

[node name="victory_panel" type="Panel" parent="."]

process/pause_mode = 2
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 700.0
margin/top = 450.0
margin/right = 1220.0
margin/bottom = 655.0

[node name="victory_text" type="Label" parent="victory_panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 44.0
margin/top = 15.0
margin/right = 476.0
margin/bottom = 63.0
custom_fonts/font = SubResource( 4 )
text = "Player X Wins"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="replay" type="Button" parent="victory_panel"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 187.0
margin/top = 100.0
margin/right = 333.0
margin/bottom = 125.0
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play again"
flat = false

[node name="quit" type="Button" parent="victory_panel"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 227.0
margin/top = 150.0
margin/right = 293.0
margin/bottom = 175.0
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="pause_menu" type="Panel" parent="."]

process/pause_mode = 2
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 835.0
margin/top = 450.0
margin/right = 1085.0
margin/bottom = 630.0

[node name="title" type="Label" parent="pause_menu"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 17.0
margin/top = 5.0
margin/right = 233.0
margin/bottom = 75.0
custom_fonts/font = SubResource( 7 )
text = "PAUSED"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="resume" type="Button" parent="pause_menu"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 75.0
margin/right = 107.0
margin/bottom = 100.0
custom_fonts/font = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = false

[node name="quit_to_menu" type="Button" parent="pause_menu"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 110.0
margin/right = 185.0
margin/bottom = 135.0
custom_fonts/font = SubResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "EXIT TO MENU"
flat = false

[node name="quit_to_desktop" type="Button" parent="pause_menu"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 145.0
margin/right = 225.0
margin/bottom = 170.0
custom_fonts/font = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "EXIT TO DESKTOP"
flat = false

[node name="sound" type="SamplePlayer" parent="."]

process/pause_mode = 2
config/polyphony = 1
config/samples = SubResource( 11 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="pressed" from="victory_panel/replay" to="." method="_on_replay_pressed"]

[connection signal="pressed" from="victory_panel/quit" to="." method="_on_quit_pressed"]

[connection signal="pressed" from="pause_menu/resume" to="." method="_on_resume_pressed"]

[connection signal="pressed" from="pause_menu/quit_to_menu" to="." method="_on_quit_to_menu_pressed"]

[connection signal="pressed" from="pause_menu/quit_to_desktop" to="." method="_on_quit_to_desktop_pressed"]


